Bug 439297 - "Apply" button of Application Style KCM is unnecessarily activated after change in application style settings
Summary: "Apply" button of Application Style KCM is unnecessarily activated after chan...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_style (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-29 11:47 UTC by Patrick Silva
Modified: 2021-12-24 21:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-06-29 11:47:54 UTC
STEPS TO REPRODUCE
1. open Application Style KCM
2. click on "Configure style..." button of the current style
3. change any setting and click on "OK" button

OBSERVED RESULT
"Apply" button of Application Style KCM is activated despite the change done in the last step was already applied

EXPECTED RESULT
greyed out "Apply" button after the last step

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Paul Worrall 2021-06-29 13:22:54 UTC
I can reproduce.  Also the "Reset" button is activated (and doesn't reset the change)

Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.3
Kernel Version: 5.8.0-59-generic (64-bit)
Graphics Platform: Wayland
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 2 Bug Janitor Service 2021-12-17 23:40:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1285
Comment 3 Nate Graham 2021-12-24 21:54:49 UTC
Git commit bdebc4d246698b43e4182b0ebe9a94b7d6780d60 by Nate Graham, on behalf of Nicolas Fella.
Committed on 24/12/2021 at 21:43.
Pushed by ngraham into branch 'master'.

[kcms/style] Don't call setNeedsSave when style config changes

The style config is saved already when the dialog closes so enabling the KCM apply button doesn't make sense

The comment suggests that this is done for a reason, but the style preview seems to refresh correctly even with this patch

M  +0    -3    kcms/style/kcmstyle.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/bdebc4d246698b43e4182b0ebe9a94b7d6780d60
Comment 4 Nate Graham 2021-12-24 21:55:17 UTC
Git commit 46fde8e84cbeb0a4cf7c1ee65f981e8ef8a4e046 by Nate Graham, on behalf of Nicolas Fella.
Committed on 24/12/2021 at 21:55.
Pushed by ngraham into branch 'Plasma/5.23'.

[kcms/style] Don't call setNeedsSave when style config changes

The style config is saved already when the dialog closes so enabling the KCM apply button doesn't make sense

The comment suggests that this is done for a reason, but the style preview seems to refresh correctly even with this patch


(cherry picked from commit bdebc4d246698b43e4182b0ebe9a94b7d6780d60)

M  +0    -3    kcms/style/kcmstyle.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/46fde8e84cbeb0a4cf7c1ee65f981e8ef8a4e046