[kcms/style] Don't call setNeedsSave when style config changes

The style config is saved already when the dialog closes so enabling the KCM apply button doesn't make sense

The comment suggests that this is done for a reason, but the style preview seems to refresh correctly even with this patch

BUG: 439297


(cherry picked from commit bdebc4d246698b43e4182b0ebe9a94b7d6780d60)